tests/rosetta/out/cpp/100-doors.error
g++: exit status 1
/tmp/100-doors.cpp: In function ‘int main()’:
/tmp/100-doors.cpp:7:15: error: ‘__doors_type’ was not declared in this scope
    7 |   std::vector<__doors_type> doors = {};
      |               ^~~~~~~~~~~~
/tmp/100-doors.cpp:7:27: error: template argument 1 is invalid
    7 |   std::vector<__doors_type> doors = {};
      |                           ^
/tmp/100-doors.cpp:7:27: error: template argument 2 is invalid
/tmp/100-doors.cpp:9:11: error: request for member ‘push_back’ in ‘doors’, which is of non-class type ‘int’
    9 |     doors.push_back(false);
      |           ^~~~~~~~~
/tmp/100-doors.cpp:14:12: error: invalid types ‘int[int]’ for array subscript
   14 |       doors[idx] = (!doors[idx]);
      |            ^
/tmp/100-doors.cpp:14:27: error: invalid types ‘int[int]’ for array subscript
   14 |       doors[idx] = (!doors[idx]);
      |                           ^
/tmp/100-doors.cpp:22:16: error: invalid types ‘int[int]’ for array subscript
   22 |       if (doors[idx]) {
      |                ^
